# CG_OpenGL

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  imgui.ini  state.json
assets/: fragment_core.glsl
include/: bresenham.hpp  globals.hpp  gui.hpp  half_edge.hpp  handle_input.hpp  input.hpp  mesh.hpp  shader.hpp  utils.hpp  viewer.hpp  weiler-atherton-clip.hpp  xiaolin_wu.hpp
include/glad/: glad.h
shaders/: fragment_core.glsl  vertex_core.glsl  wu_line.frag  wu_line.vert
src/: CMakeLists.txt  bresenham.cpp  glad.c  gui.cpp  half_edge.cpp  handle_input.cpp  input.cpp  main.cpp  mesh.cpp  shader.cpp  shader.hpp  utils.cpp  viewer.cpp  weiler-atherton-clip.cpp  xiaolin_wu.cpp
